fix: correct CurrencyServiceImpl